--- a/frontend/src/app/shared/header/header.component.html
+++ b/frontend/src/app/shared/header/header.component.html
@@ -1,3 +1,5 @@
+<!-- src/app/components/header/header.component.html -->
+
 <!-- PUBLIC header (only on /, /login, /register) -->
 <header
   *ngIf="showAuthHeader"
@@ -106,12 +108,13 @@
           </div>
           <ul class="py-1">
             <li>
-              <a
-                routerLink="/profile"
-                class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600"
+              <!-- Changed to button that calls goToProfile() -->
+              <button
+                (click)="goToProfile()"
+                class="w-full text-left px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600"
               >
                 Profile
-              </a>
+              </button>
             </li>
             <li>
               <a
@@ -130,7 +133,9 @@
               </a>
             </li>
             <li>
+              <!-- Changed to button that calls logout() -->
               <button
+                (click)="logout()"
                 class="w-full text-left px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600"
               >
                 Log out
