--- a/frontend/src/app/pages/members/members.component.html
+++ b/frontend/src/app/pages/members/members.component.html
@@ -35,7 +35,8 @@
             class="w-full pl-8 border rounded px-3 py-2"
           />
         </div>
-        <button class="p-2 border rounded text-gray-600 hover:bg-gray-100 dark:hover:bg-gray-700">
+        <button class="p-2 border rounded text-gray-600 hover:bg-gray-100 dark:hover:bg-gray-700"
+          (click)="downloadAll()">
           <lucide-icon name="Download" class="h-4 w-4"></lucide-icon>
         </button>
       </div>
