--- a/frontend/src/app/pages/dashboard/dashboard.component.html
+++ b/frontend/src/app/pages/dashboard/dashboard.component.html
@@ -1,10 +1,10 @@
 <div class="container mx-auto py-6 space-y-6">
 
-  <!-- Title & “New Session” Button, Matias changed the route to session-reports, change back to /sessions/new -->
+  <!-- Title & “New Session” Button, Matias changed the route to /session-reports, change back to /sessions/new -->
   <div class="flex items-center justify-between">
     <h1 class="text-3xl font-bold">Dashboard</h1>
     <button
-      routerLink="session-reports"
+      routerLink="/session-reports"
       class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 flex items-center gap-2 text-sm"
     >
     <lucide-icon name="Plus" class="h-4 w-4" />
